up.css test m.index,style

--- a/JAVASCRIPT/index.html
+++ b/JAVASCRIPT/index.html
@@ -40,7 +40,7 @@
     </p>
     <p>
         <span id="css">
-            <a href="css learn.html">CSS BASIC</a>
+            <a href="css learn (test).html">CSS BASIC</a>
         </span>
     </p>
     <p>
