up.property flex

--- a/JAVASCRIPT/css learn (test).html
+++ b/JAVASCRIPT/css learn (test).html
@@ -398,15 +398,25 @@
         <li>ยิ่งค่ามาก ยิ่งทึบ</li>
     </ul>
     </div>
-    <spen class="attriburte flexbox">
-        <h2>attriburte flexbox</h2>
+    <spen class="attriburte display">
+        <h2>attriburte display</h2>
     </spen>
-    <div class="flexbox คืออะไร">
+    <div class="display คืออะไร">
         <p>คือเครื่องในการจัดการ element ต่างๆในหน้าเว็บทำงานคล้ายกับ block inline position</p>
+        <p>flex การจัด element ในแนวนอน</p>
     </div>
-    <div class="element flexbox">
+    <span class="attriburte flex-direction">
+        <h2>attriburte flex-direction</h2>
+    </span>
+    <div class="flex-direction คืออะไร">
+        ใช้ในการกำหนดทิศทางของ element
+    </div>
+    <div class="element flex-direction">
         <ul>
-            <li></li>
+            <li>rox ค่าเริ่มต้น</li>
+            <li>colimn จัดวาง element ในแนวตั้ง</li>
+            <li>row-reverse จัดวาง element ในแนวนอนแบต้องข้าม</li>
+            <li>>colimn-reverse จัดวาง element ในตั้งนอนแบต้องข้าม</li>
         </ul>
     </div>
 </body>
