--- a/JAVASCRIPT/css learn (test).html
+++ b/JAVASCRIPT/css learn (test).html
@@ -434,7 +434,7 @@ value box-shadow
 <!-- display คืออะไร -->
     <section class="display คืออะไร">
         <p>คือเครื่องในการจัดการ element ต่างๆในหน้าเว็บทำงาน</p>
-    </search>
+    </section>
 <!-- property display -->
     <div class="property display">
         <ul>
@@ -449,13 +449,16 @@ value box-shadow
             <li>visibility: กำหนดการมองเห็นขององค์ประกอบ เช่น visible (ค่าเริ่มต้น), hidden, collapse</li>
         </ul>
     </div>
-    <span class="attriburte flex-direction">
-        <h2>attriburte flex-direction</h2>
-    </span>
-    <div class="flex-direction คืออะไร">
+<!-​- property flex-direction -​->
+    <header class="property flex-direction">
+        <h2>property flex-direction</h2>
+    </header>
+<!-​- flex-direction คืออะไร​ -​->
+    <section class="flex-direction คืออะไร">
         ใช้ในการกำหนดทิศทางของ element
-    </div>
-    <div class="element flex-direction">
+    </section>
+<!-- value flex-direction -​->
+    <div class="value flex-direction">
         <ul>
             <li>rox ค่าเริ่มต้น</li>
             <li>colimn จัดวาง element ในแนวตั้ง</li>
@@ -463,27 +466,33 @@ value box-shadow
             <li>>colimn-reverse จัดวาง element ในตั้งนอนแบต้องข้าม</li>
         </ul>
     </div>
-    <spen class="attriburte flex-wrap">
-        <h2>attriburte flex-wrap</h2>
-    </spen>
-    <div class="flex-wrap คืออะไร">
+<!-- property flex-wrap -​->
+    <header class="property flex-wrap">
+        <h2>property​ flex-wrap</h2>
+    </header>
+<!-- flex-wrap คืออะไร​-->
+    <section class="flex-wrap คืออะไร">
         <p>คือการจัด element ที่เกินออกจาก คอนเทนเนอร์ให้อยู่ในคอนเทน์เนอร์</p>
-    </div>
-    <div class="element flex-wrap">
+    </setion>
+<!-- Value​ flex-wrap​ -->
+    <div class="Value​ flex-wrap">
         <ul>
             <li>nowrap ค่าเริ่มต้น</li>
             <li>wrap จัดวาง element ที่เกินพื้นที่ให้อยู่ในพื้นที่จากบนลงล่าง</li>
             <li>wrap-reverse จัดวาง element ที่เกินพื้นที่ให้อยู่ในพื้นที่จากล่างขึ้นบน</li>
         </ul>
     </div>
-    <span class="attriburte flex-properties">
-        <h2>attriburte flex-properties</h2>
-    </span>
-    <div class="flex-properties คืออะไร">
+<!-- property flex-properties -->
+    <header class="property​ flex-properties">
+        <h2>property flex-properties</h2>
+    </header>
+<!-- flex-properties คืออะไร -->
+    <section class="flex-properties คืออะไร">
         <p>คือการจัด element ให้มีขนาดตามที่กำหนด</p>
-    </div>
-    <div>
-        <ul element flex-properties>
+    </section>
+<!-- value flex-properties​-->
+    <div class="value flex-properties​" >
+        <ul>
             <li>flex-shrink ทำให้ element หดตัวเมื่อเทียยบกับ element อื่น ค่าเริ่มต้น 1</li>
             <li>flex-grow ทำให้ element ขยายตัวเมื่อเทียบกับ element อื่น ค่าเริ่มต้น 0</li>
             <li>flex-basis กำหนดค่ายืดหยุ่นเริ่มต้น</li>
