--- a/JAVASCRIPT/css learn (test).html
+++ b/JAVASCRIPT/css learn (test).html
@@ -449,24 +449,24 @@ value box-shadow
             <li>visibility: กำหนดการมองเห็นขององค์ประกอบ เช่น visible (ค่าเริ่มต้น), hidden, collapse</li>
         </ul>
     </div>
-<!-​- property flex-direction -​->
+<!-- property flex-direction -->
     <header class="property flex-direction">
         <h2>property flex-direction</h2>
     </header>
-<!-​- flex-direction คืออะไร​ -​->
+<!-- flex-direction คืออะไร -->
     <section class="flex-direction คืออะไร">
         ใช้ในการกำหนดทิศทางของ element
     </section>
-<!-- value flex-direction -​->
+<!-- value flex-direction -->
     <div class="value flex-direction">
         <ul>
-            <li>rox ค่าเริ่มต้น</li>
-            <li>colimn จัดวาง element ในแนวตั้ง</li>
-            <li>row-reverse จัดวาง element ในแนวนอนแบต้องข้าม</li>
-            <li>>colimn-reverse จัดวาง element ในตั้งนอนแบต้องข้าม</li>
+            <li>row ค่าเริ่มต้น</li>
+            <li>colimn จัดว่าง element ในแนวตั้ง</li>
+            <li>row-reverse จัดวาง element ในแนวนอนแบบตรงข้าม</li>
+            <li>colimn-reverse จัดวาง element ในตั้งนอนแบบตรงข้าม</li>
         </ul>
     </div>
-<!-- property flex-wrap -​->
+<!-- property flex-wrap -->
     <header class="property flex-wrap">
         <h2>property​ flex-wrap</h2>
     </header>
