end of CSS content

--- a/JAVASCRIPT/css learn (test).html
+++ b/JAVASCRIPT/css learn (test).html
@@ -468,14 +468,14 @@ value box-shadow
     </div>
 <!-- property flex-wrap -->
     <header class="property flex-wrap">
-        <h2>property​ flex-wrap</h2>
+        <h2>property flex-wrap</h2>
     </header>
 <!-- flex-wrap คืออะไร​-->
     <section class="flex-wrap คืออะไร">
         <p>คือการจัด element ที่เกินออกจาก คอนเทนเนอร์ให้อยู่ในคอนเทน์เนอร์</p>
     </setion>
 <!-- Value​ flex-wrap​ -->
-    <div class="Value​ flex-wrap">
+    <div class="Value flex-wrap">
         <ul>
             <li>nowrap ค่าเริ่มต้น</li>
             <li>wrap จัดวาง element ที่เกินพื้นที่ให้อยู่ในพื้นที่จากบนลงล่าง</li>
@@ -483,7 +483,7 @@ value box-shadow
         </ul>
     </div>
 <!-- property flex-properties -->
-    <header class="property​ flex-properties">
+    <header class="property flex-properties">
         <h2>property flex-properties</h2>
     </header>
 <!-- flex-properties คืออะไร -->
@@ -491,7 +491,7 @@ value box-shadow
         <p>คือการจัด element ให้มีขนาดตามที่กำหนด</p>
     </section>
 <!-- value flex-properties​-->
-    <div class="value flex-properties​" >
+    <div class="value flex-properties">
         <ul>
             <li>flex-shrink ทำให้ element หดตัวเมื่อเทียยบกับ element อื่น ค่าเริ่มต้น 1</li>
             <li>flex-grow ทำให้ element ขยายตัวเมื่อเทียบกับ element อื่น ค่าเริ่มต้น 0</li>
@@ -499,6 +499,124 @@ value box-shadow
             <li>flex:1 ทำให้ element ที่อยู่ในแถวเดียวกันมีขนาดเท่ากัน</li>
         </ul>
     </div>
-
+<!-- property justify-content -->
+    <header class="property justify-content">
+        <h2>property justify-content</h2>
+    </header>
+<!-- justify-content คืออะไร -->
+    <section class="justify-content คืออะไร">
+        <p>จัดวางตำแหน่งของ element</p>
+    </section>
+<!-- value justify-content -->
+    <div class="value justify-content">
+        <ul>
+            <li>flex-start ชิดซ้าย container ทิศตามแนวนอน</li>
+            <li>center กึ่งกลาง container ทิศตามแนวนอน</li>
+            <li>flex-end ชิดขวา container ทิศตามแนวนอน</li>
+            <li>space-around ระยะห่างซ้ายขวาและ element เท่ากัน</li>
+            <li>space-between ระยะห่างซ้ายขวาและ element เท่ากัน (ติดมุม)</li>
+        </ul>
+    </div>
+<!-- property flex-alignment -->
+    <header class="flex-alignment">
+        <h2>flex-alignment</h2>
+    </header>
+<!-- flex-alignment ใช้ยังไง -->
+    <section class="flex-alignment ใช้ยังไง">
+        <p>align-item (element ทุกตัว) และ align-self (element ที่ต้องการ)</p>
+    </section>
+<!-- value flex-alignment -->
+    <div class="value flex-alignment">
+        <ul>
+            <li>stretch กำหนด element เท่ากับขนาด container</li>
+            <li>flex-start ชิดซ้าย container ทิศตามแนวนอน</li>
+            <li>center กึ่งกลาง container ทิศตามแนวนอน</li>
+            <li>flex-end ชิดขวา container ทิศตามแนวนอน</li>
+        </ul>
+    </div>
+<!-- property grid layout -->
+    <header class="property grid layout">
+        <h2>property grid layout</h2>
+    </header>
+<!-- วิธีใช้ property grid layout -->
+    <div class="วิธีใช้ property grid layout">
+        <ul>
+            <li>display: grid; การใช้งาน</li>
+            <li>grid-template-row:(จำนวนแถว,ขนาด)</li>
+            <li>grid-template-columns:(จำนวนคอลัมน์,ขนาด)</li>
+        </ul>
+    </div>
+<!-- property text-shadow -->
+    <header cless="property text-shadow">
+        <h2>property text-shadow</h2>
+    </header>
+<!-- text-shadow คืออะไร -->
+    <section class="text-shadow คืออะไร">
+        <p>กำหนดเงาข้อความ</p>
+        <p>text-shadow: x y blur color</p>
+    </section>
+<!-- value text-shadow -->
+    <div class="value text-shadow">
+        <ul>
+            <li>x คือ เงาแกน x (+ขวา,-ซ้าย)</li>
+            <li>y คือ เงาแกน y (+บน,-ล่าง)</li>
+            <li>blur คือ ความชัดของเงา</li>
+            <li>color คือ สีของเงา</li>
+        </ul>
+    </div>
+<!-- property tranform -->
+    <header>
+        <h2>property tranform</h2>
+    </header>
+<!-- tranform คืออะไร -->
+    <section class="tranform คืออะไร">
+        <p>คือการจัด ตำแหน่ง,ขนาด,การหมุด,การเอียง โดยใช้ tranform</p>
+    </section>
+<!-- value tranform -->
+    <div class="value tranform">
+        <ul>
+            <li>translate(x,y) กำหนดตำแหน่ง element</li>
+            <li>scale(x,y) ขยาย element</li>
+            <li>rotate(มุม deg) กำหนดการหมุนของ element</li>
+            <li>skewX(มุม deg)กำหนดการเอียงของ element แกน x</li>
+            <li>skewY(มุม deg)กำหนดการเอียงของ element แกน y</li>
+        </ul>
+    </div>
+<!-- property transition -->
+    <header class="property transition">
+        <h2>property transition</h2>
+    </header>
+<!-- transition คืออะไร -->
+    <section class="transition คืออะไร">
+        <p>คือการเปลี่ยนค่าใน element จากค่านึงไปสู่ค่านึงในช่วงเวลาที่กำหนด</p>
+        <p>transition: properties duration time-fuction delay;</p>
+    </section>
+<!-- value transition -->
+    <div class="value transition">
+        <ul>
+            <li>properties คือ property นั้น</li>
+            <li>duration คือ ระยะในการเปลี่ยนค่า</li>
+            <li>time-fuction คือ รูปแบบฟังก์ชั่นของการเปลี่ยนแปลง มีค่าปกติเป็น ease-in</li>
+            <li>delay คือ ระยะเวลาที่จะเริ่มเปลี่ยน</li>
+        </ul>
+    </div>
+<!-- property animetion -->
+    <header class="property animetion">
+        <h2>property animetion</h2>
+    </header>
+    <section>
+        <p>ใช้ร่วมกับ @keyframes name animetion</p>
+    </section>
+<!-- value animetion -->
+    <div class="value animetion">
+        <ul>
+            <li>animetion-name คือ ตั้งชื่ออนิเมชั่น</li>
+            <li>animetion-duration คือ ระยะเวลาของอนิเมชั่นจากเริ่มต้นไปสิ้นสุด</li>
+            <li>animetion-time-fuction คือ รูปแบบการเล่นอนิเมชั่น</li>
+            <li>animetion-iteration-count คือ จำนวนการเล่นอนิเมชั่น (infinite ไม่สิ้นสุด)</li>
+            <li>animetion--diraction คือ ทิศทางการเล่น(เล่นจากเฟรม 1 ไปถึง เฟรมที่ 10 หรือแบบย้อนกลับก็ได้)</li>
+            <li>animetion-delay คือ ระยะเวลาที่จะเริ่ม</li>
+        </ul>
+    </div>
 </body>
 </html>
