--- a/JAVASCRIPT/html learn.html
+++ b/JAVASCRIPT/html learn.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML LEARN</title>
 </head>
+<style>
+    @media (min-width: 320px) and (max-width: 480px) {
+        
+    }
+</style>
 <body>
     <h1>HTML เบื้องต้น</h1>
     <p>
